--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 python:
-  - "3.5"
+  - "3.8"
 cache: pip
 install:
-  - pip install -r requirements.txt
+  - pip install .
 script:
   - python tests/test_Shield.py
   - python tests/test_app.py
